deps/v8/test/message/fail/weak-refs-makecell1.out
*%(basename)s:8: TypeError: WeakFactory.makeCell: target must be an object
wf.makeCell(1);
   ^
TypeError: WeakFactory.makeCell: target must be an object
    at WeakFactory.makeCell (<anonymous>)
    at *%(basename)s:8:4
